<resources>
    <string name="app_name">Daily Expenses</string>

    <!-- Auth Screen -->
    <string name="track_your_financial_journey_with_ease">Track your financial journey with ease</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="loading_authentication">Authenticating</string>

    <!-- Web Client ID -->
    <string name="web_client_id">11825197783-s67ud113cs8gaia0ijjlfaocj7njgprt.apps.googleusercontent.com</string>

    <!-- Bottom Navigation -->
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="calendar">Calendar</string>

    <!-- Dashboard -->
    <string name="track_your_expenses_and_manage_accounts_efficiently">Track Your Expenses And Manage Accounts Efficiently</string>
    <string name="total_balance">Total Balance</string>
    <string name="_0_00">₹0.00</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="my_accounts">My Accounts</string>
    <string name="no_account_found_please_add_one">No Account Found Please Add One</string>
    <string name="view_all">View All</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_type">Account Type</string>
    <string name="my_transactions">My Transactions</string>

    <!-- Account Activity -->
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>

    <!-- Accounts -->
    <string name="initial_balance">Initial Balance</string>
    <string name="cancel">Cancel</string>

    <!-- Transactions -->
    <string name="view_and_manage_your_transaction_history">View and manage your transaction history</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="new_transaction">+ New Transaction</string>
    <string name="no_transactions_yet_start_by_adding_your_first_transaction">No transactions yet. Start by adding your first transaction.</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="type">Type</string>

</resources>