<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_app_logo"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_your_financial_journey_with_ease"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="4dp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_google"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_with_google"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/background_color"
                    android:textColor="@color/textPrimary"
                    style="@style/Widget.Material3.Button"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginTop="8dp"
                android:gravity="center" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_guest"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_as_guest"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/dark_blue"
                    android:textColor="@android:color/white"
                    style="@style/Widget.Material3.Button"/>
            </FrameLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/loading"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy"
                android:textSize="11sp"
                android:textAlignment="center"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>